--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
     <section class="hero">
         <div class="container">
             <div class="pdf-image">
-                <a href="../BookCover_2025.pdf" target="_blank">
-                    <img src="../book-cover-thumbnail.jpg" alt="Book Cover">
+                <a href="BookCover_2025.pdf" target="_blank">
+                    <img src="book-cover-thumbnail.jpg" alt="Book Cover">
                     <span class="pdf-link">View Book Cover PDF</span>
                 </a>
             </div>
