--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <div class="container">
             <h2 style="text-align: center; margin-bottom: 2rem;">About the Author</h2>
             <div style="max-width: 800px; margin: 0 auto; text-align: center;">
-                <img src="https://github.com/nayagam4320131110/Webpage/blob/main/Author-Photo.jpg" alt="Deb\ra Silverman" class="author-photo">
+                <img src="https://github.com/nayagam4320131110/Webpage/blob/main/Author-Photo.jpg" alt="Debra Silverman" class="author-photo">
                 <p style="margin-bottom: 1rem;">
                     Astrologer, psychotherapist, and spiritual guide Debra Silverman is here to bring hope to those experiencing collective pain. With a climate crisis standing in the foreground, she brings her wisdom of the elements and astrology to the table to uncover solutions for our times. She is the author of The Missing Element: Inspiring Compassion for the Human Condition (Findhorn Press), and is founder of a school that has trained more than 4,000 people in Astrology. Debra is also host of The I Don’t Believe in Astrology Podcast.
                 </p>
