--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 
     <section class="author-section">
         <div class="container">
-            <h2 style="text-align: center; margin-bottom: 2rem;">About the Author</h2>
+            <h2 style="text-align: center; margin-bottom: 2rem;">Abouttt the Author</h2>
             <div style="max-width: 800px; margin: 0 auto; text-align: center;">
                 <img src="/Users/naavudai/Desktop/Test/author-photo.jpg" alt="Debbra Silverman" class="author-photo">
                 <p style="margin-bottom: 1rem;">
