--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </a>
             </div>
 
-            <div class="book-title-section"> <h1 class=>Book Title</h1><h1 class="book-title">I Don't Believe in Astrology</h1>
+            <div class="book-title-section"> <h1 class=>Book TTTitle</h1><h1 class="book-title">I Dn't Believe in Astrology</h1>
                 <h2 class="book-subtitle">A Therapist's Guide to the Life-Changing Wisdom of the Stars</h2>
             </div>
 
